Colaboratory を使用して作成しました

--- a/learncss.ipynb
+++ b/learncss.ipynb
@@ -6,7 +6,7 @@
       "name": "learncss.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNbhrnTAFni5Ds5xpcWQ7Ab",
+      "authorship_tag": "ABX9TyMDVYHEXVtH2BkcDUvt7ZID",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -198,7 +198,7 @@
       },
       "source": [
         "%%html\n",
-        "<style> /* コメントも書けるがこの場所だと行コメント // が使えない */\n",
+        "<style> /* コメントも書ける */\n",
         "p, li {\n",
         "  color: green;\n",
         "} </style>\n",
@@ -6261,7 +6261,7 @@
         "    <div class=\"box percent\">I am 40% wide</div>\n",
         "</div>"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
