Colaboratory を使用して作成しました

--- a/paramsingh.ipynb
+++ b/paramsingh.ipynb
@@ -6,7 +6,7 @@
       "name": "paramsingh.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNHC1XRwSoHodGEI/rbPvMr",
+      "authorship_tag": "ABX9TyOSQdoqvyH3rxkQpilpRvSf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -88,51 +88,60 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "eSBLBHbZI831"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "eSBLBHbZI831",
+        "outputId": "58880e7f-d2b9-47ba-a126-2245035e499b"
       },
       "source": [
-        "%%html\r\n",
-        "\r\n",
-        "<script>\r\n",
-        "    const FOOD_TYPE = {\r\n",
-        "        FRUIT: \"FRUIT\",\r\n",
-        "        VEGETABLE: \"VEGETABLE\"\r\n",
-        "    }\r\n",
-        "    var foods = [\r\n",
-        "        { name: \"Carrot\", type: FOOD_TYPE.VEGETABLE, cals: 41 },\r\n",
-        "        { name: \"Avocado\", type: FOOD_TYPE.FRUIT, cals: 160 },\r\n",
-        "        { name: \"Orange\", type: FOOD_TYPE.FRUIT, cals: 47 },\r\n",
-        "        { name: \"Beetrot\", type: FOOD_TYPE.VEGETABLE, cals: 43 },\r\n",
-        "        { name: \"Banana\", type: FOOD_TYPE.FRUIT, cals: 89 }\r\n",
-        "    ];\r\n",
+        "%%script node\r\n",
+        "const FOOD_TYPE = {\r\n",
+        "    FRUIT: \"FRUIT\",\r\n",
+        "    VEGETABLE: \"VEGETABLE\"\r\n",
+        "}\r\n",
+        "var foods = [\r\n",
+        "    { name: \"Carrot\", type: FOOD_TYPE.VEGETABLE, cals: 41 },\r\n",
+        "    { name: \"Avocado\", type: FOOD_TYPE.FRUIT, cals: 160 },\r\n",
+        "    { name: \"Orange\", type: FOOD_TYPE.FRUIT, cals: 47 },\r\n",
+        "    { name: \"Beetrot\", type: FOOD_TYPE.VEGETABLE, cals: 43 },\r\n",
+        "    { name: \"Banana\", type: FOOD_TYPE.FRUIT, cals: 89 }\r\n",
+        "];\r\n",
         "\r\n",
         "\r\n",
-        "    function getName(food) {\r\n",
-        "        return food.name;\r\n",
-        "    }\r\n",
+        "function getName(food) {\r\n",
+        "    return food.name;\r\n",
+        "}\r\n",
         "\r\n",
-        "    function isFruit(food) {\r\n",
-        "        return food.type === FOOD_TYPE.FRUIT;\r\n",
-        "    }\r\n",
+        "function isFruit(food) {\r\n",
+        "    return food.type === FOOD_TYPE.FRUIT;\r\n",
+        "}\r\n",
         "\r\n",
-        "    function accumulator(bowl, name) {\r\n",
-        "        return [...bowl, name];\r\n",
-        "    }\r\n",
+        "function accumulator(bowl, name) {\r\n",
+        "    return [...bowl, name];\r\n",
+        "}\r\n",
         "\r\n",
-        "    function makeFruitSmoothie(foodsInput) {\r\n",
-        "        return foodsInput\r\n",
-        "            .filter(isFruit)\r\n",
-        "            .map(getName)\r\n",
-        "            .reduce(accumulator, [])\r\n",
-        "    }\r\n",
+        "function makeFruitSmoothie(foodsInput) {\r\n",
+        "    return foodsInput\r\n",
+        "        .filter(isFruit)\r\n",
+        "        .map(getName)\r\n",
+        "        .reduce(accumulator, [])\r\n",
+        "}\r\n",
         "\r\n",
-        "    const smoothieBowl = makeFruitSmoothie(foods);\r\n",
+        "const smoothieBowl = makeFruitSmoothie(foods);\r\n",
         "\r\n",
-        "    console.log(smoothieBow); // [\"Avocado\", \"Orange\", \"Banana\"]\r\n",
-        "</script>"
+        "console.log(smoothieBowl); // [\"Avocado\", \"Orange\", \"Banana\"]\r\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[ 'Avocado', 'Orange', 'Banana' ]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
