Colaboratory を使用して作成しました

--- a/paramsingh.ipynb
+++ b/paramsingh.ipynb
@@ -6,7 +6,7 @@
       "name": "paramsingh.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyO/n6hlGXNbaqWPFNBdOm1w",
+      "authorship_tag": "ABX9TyNj/LWL1hsoMxCEuO8Ye37F",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -59,18 +59,6 @@
       },
       "source": [
         "# transduction"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "9hgVmIT_JoaU"
-      },
-      "source": [
-        "# Functional Prgramming 入門\r\n",
-        "こっちを先に読もう。\r\n",
-        "\r\n",
-        "https://codeburst.io/functional-programming-in-javascript-part-i-2ea6c592f3c1"
       ]
     },
     {
@@ -199,11 +187,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "DFLKKvjPomLq",
-        "outputId": "ebc51e53-34c7-423d-e085-b6a88fe0d885",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "DFLKKvjPomLq",
+        "outputId": "ebc51e53-34c7-423d-e085-b6a88fe0d885"
       },
       "source": [
         "%%script node\r\n",
@@ -230,6 +218,119 @@
           "output_type": "stream",
           "text": [
             "[ { name: 'item3', rating: 10, price: 80 } ]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "mk4BxBqxutqd"
+      },
+      "source": [
+        "# reduce\r\n",
+        "filter と map はそこそこわからないでもないのだが、その前に reduce に興味がある。\r\n",
+        "\r\n",
+        "検索して調べよう。\r\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "p1ZM7ZsjvNXA",
+        "outputId": "bf107569-f74e-42b3-8786-154eca638eca",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# mdn の最初の例\r\n",
+        "%%script node\r\n",
+        "const array1 = [1, 2, 3, 4];\r\n",
+        "const reducer = (accumulator, currentValue) => accumulator + currentValue;\r\n",
+        "\r\n",
+        "// 1 + 2 + 3 + 4\r\n",
+        "console.log(array1.reduce(reducer));\r\n",
+        "// expected output: 10\r\n",
+        "\r\n",
+        "// 5 + 1 + 2 + 3 + 4\r\n",
+        "console.log(array1.reduce(reducer, 5));\r\n",
+        "// expected output: 15"
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "10\n",
+            "15\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3_ZCrQiQvsUQ",
+        "outputId": "fcc4d265-90c5-48ff-e24a-84d4f2f090a5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# 実験 multiply でも同じか\r\n",
+        "%%script node\r\n",
+        "const array1 = [1, 2, 3, 4];\r\n",
+        "const reducer = (accumulator, currentValue) => accumulator * currentValue;\r\n",
+        "\r\n",
+        "// 1 * 2 * 3 * 4\r\n",
+        "console.log(array1.reduce(reducer));\r\n",
+        "// expected output: 24\r\n",
+        "\r\n",
+        "// 5 * 1 * 2 * 3 * 4\r\n",
+        "console.log(array1.reduce(reducer, 5));\r\n",
+        "// expected output: 120"
+      ],
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "0\n",
+            "120\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "en5E_zjxwO0F",
+        "outputId": "a8dc7480-b267-418c-b320-dde1a3acfd98",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# 実験 string でも同じか\r\n",
+        "%%script node\r\n",
+        "const array1 = [\"1\",\"2\", \"3\", \"4\"];\r\n",
+        "const reducer = (accumulator, currentValue) => accumulator + currentValue;\r\n",
+        "\r\n",
+        "console.log(array1.reduce(reducer));\r\n",
+        "\r\n",
+        "console.log(array1.reduce(reducer, 5));"
+      ],
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1234\n",
+            "51234\n"
           ],
           "name": "stdout"
         }
