Colaboratory を使用して作成しました

--- a/paramsingh.ipynb
+++ b/paramsingh.ipynb
@@ -6,7 +6,7 @@
       "name": "paramsingh.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNj/LWL1hsoMxCEuO8Ye37F",
+      "authorship_tag": "ABX9TyNCmZA4go0HXnRL2HxxorDq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -181,7 +181,7 @@
         "\r\n",
         "console.log(getBestProducts()) // [...]"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -212,7 +212,7 @@
         "const bestProducts = getBestProducts(productsInput)\r\n",
         "console.log(bestProducts)\r\n"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -239,10 +239,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "p1ZM7ZsjvNXA",
-        "outputId": "bf107569-f74e-42b3-8786-154eca638eca",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "bf107569-f74e-42b3-8786-154eca638eca"
       },
       "source": [
         "# mdn の最初の例\r\n",
@@ -258,7 +258,7 @@
         "console.log(array1.reduce(reducer, 5));\r\n",
         "// expected output: 15"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -274,10 +274,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "3_ZCrQiQvsUQ",
-        "outputId": "fcc4d265-90c5-48ff-e24a-84d4f2f090a5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "fcc4d265-90c5-48ff-e24a-84d4f2f090a5"
       },
       "source": [
         "# 実験 multiply でも同じか\r\n",
@@ -293,7 +293,7 @@
         "console.log(array1.reduce(reducer, 5));\r\n",
         "// expected output: 120"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -309,10 +309,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "en5E_zjxwO0F",
-        "outputId": "a8dc7480-b267-418c-b320-dde1a3acfd98",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "a8dc7480-b267-418c-b320-dde1a3acfd98"
       },
       "source": [
         "# 実験 string でも同じか\r\n",
@@ -324,13 +324,50 @@
         "\r\n",
         "console.log(array1.reduce(reducer, 5));"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "1234\n",
             "51234\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "NjBWb5RH1Qpy"
+      },
+      "source": [
+        "# dots syntax"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "OraEpueA1T4K",
+        "outputId": "53674a3e-497b-4f1f-e476-1b45aa2ad4c2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "%%script node\r\n",
+        "const arr1 = ['solid', 'bicolor', 'tabby'];\r\n",
+        "const arr2 = ['calico', 'tortoiseshell'];\r\n",
+        "const item = \"me\"\r\n",
+        "\r\n",
+        "console.log([item, ...arr1, ...arr2])"
+      ],
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[ 'me', 'solid', 'bicolor', 'tabby', 'calico', 'tortoiseshell' ]\n"
           ],
           "name": "stdout"
         }
