Colaboratory を使用して作成しました

--- a/learncss.ipynb
+++ b/learncss.ipynb
@@ -6,7 +6,7 @@
       "name": "learncss.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMhol8HLdTEEXhG0Z/Cjd/9",
+      "authorship_tag": "ABX9TyOuD8UcCb2exyDQPVGOJufv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -7016,7 +7016,7 @@
         "  <text transform=\"matrix(1, 0, 0, 1, -255.915314, 0)\" style=\"fill: rgb(235, 208, 208); font-family: &quot;Roboto Slab&quot;; font-size: 28px; white-space: pre;\"><tspan x=\"435.196\" y=\"152.2\">box with</tspan><tspan x=\"435.196\" dy=\"1em\">​</tspan><tspan>opacity</tspan></text>\r\n",
         "</svg> </div>"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -7060,11 +7060,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "CFozukZhwAhD",
-        "outputId": "5fe85c3d-e4d6-4927-9640-2bf456fb906b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 110
-        }
+        },
+        "outputId": "5fe85c3d-e4d6-4927-9640-2bf456fb906b"
       },
       "source": [
         "# 実験 svg に時間がかかる => defs を削除したら軽くなった\r\n",
@@ -7087,7 +7087,7 @@
         "</svg>\r\n",
         " </div>"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -7125,11 +7125,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "gEdya7OsxD1d",
-        "outputId": "c8c3cc28-ed34-49cd-8cfb-df953e2f1b69",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 121
-        }
+        },
+        "outputId": "c8c3cc28-ed34-49cd-8cfb-df953e2f1b69"
       },
       "source": [
         "# 実験 defs => wdn の例 これは遅くならない\r\n",
@@ -7148,7 +7148,7 @@
         "        fill=\"url(#Gradient01)\"  />\r\n",
         "</svg>"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -7167,6 +7167,93 @@
               "  <rect x=\"10\" y=\"10\" width=\"60\" height=\"10\"\n",
               "        fill=\"url(#Gradient01)\"  />\n",
               "</svg>"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ThRibl6hL2Ii"
+      },
+      "source": [
+        "# Color"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "98Ih_ypUL4XQ",
+        "outputId": "44a482f8-2e03-4df8-aefe-498b9f09884a",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 120
+        }
+      },
+      "source": [
+        "%%html\r\n",
+        "<style>\r\n",
+        "    .box {\r\n",
+        "        width:400px;\r\n",
+        "        font-size: 200%;\r\n",
+        "        border-radius: 1em;\r\n",
+        "    }\r\n",
+        "    .one {\r\n",
+        "        background-color: #02798b;\r\n",
+        "    }\r\n",
+        "\r\n",
+        "    .two {\r\n",
+        "        background-color: #c55da1;\r\n",
+        "    }\r\n",
+        "\r\n",
+        "    .three {\r\n",
+        "        background-color: #128a7d;\r\n",
+        "    }\r\n",
+        "</style>\r\n",
+        "\r\n",
+        "<div class=\"wrapper\">\r\n",
+        "    <div class=\"box one\">#02798b</div>\r\n",
+        "    <div class=\"box two\">#c55da1</div>\r\n",
+        "    <div class=\"box three\">#128a7d</div>\r\n",
+        "</div>"
+      ],
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<style>\n",
+              "    .box {\n",
+              "        width:400px;\n",
+              "        font-size: 200%;\n",
+              "        border-radius: 1em;\n",
+              "    }\n",
+              "    .one {\n",
+              "        background-color: #02798b;\n",
+              "    }\n",
+              "\n",
+              "    .two {\n",
+              "        background-color: #c55da1;\n",
+              "    }\n",
+              "\n",
+              "    .three {\n",
+              "        background-color: #128a7d;\n",
+              "    }\n",
+              "</style>\n",
+              "\n",
+              "<div class=\"wrapper\">\n",
+              "    <div class=\"box one\">#02798b</div>\n",
+              "    <div class=\"box two\">#c55da1</div>\n",
+              "    <div class=\"box three\">#128a7d</div>\n",
+              "</div>"
             ],
             "text/plain": [
               "<IPython.core.display.HTML object>"
