--- a/learncss.ipynb
+++ b/learncss.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "learncss.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPs/JdwCQ6J5TYsqxSWxADS",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyPjOGb9gIiUxlFIXzgSrWmz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -7223,7 +7224,7 @@
         "    <div class=\"box three\">#128a7d</div>\r\n",
         "</div>"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -7279,11 +7280,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "EuBha6riqCRK",
-        "outputId": "45c697b6-232e-48a8-f386-7ed7f6d3e65a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 120
-        }
+        },
+        "outputId": "45c697b6-232e-48a8-f386-7ed7f6d3e65a"
       },
       "source": [
         "%%html\r\n",
@@ -7313,7 +7314,7 @@
         "    <div class=\"box three\">rgba(18, 138, 125, .9)</div>\r\n",
         "</div>"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -7356,14 +7357,23 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "UM91591STx9w"
+      },
+      "source": [
+        "# 画像とグラデーション"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "WbbujOD5qmqv",
-        "outputId": "ecc56657-0531-402d-eaeb-9713934abf7b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 317
-        }
+        },
+        "outputId": "ecc56657-0531-402d-eaeb-9713934abf7b"
       },
       "source": [
         "%%html\r\n",
@@ -7387,7 +7397,7 @@
         "<div class=\"box svg\"></div>\r\n",
         "<div class=\"box gradient\"></div>"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -7426,11 +7436,197 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "uV2Hu73OUzMW"
+      },
+      "source": [
+        "# 位置 position"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 337
+        },
+        "id": "VLtWS9hJUzh-",
+        "outputId": "526af7e3-c16b-4dec-989a-2519dff632fb"
+      },
+      "source": [
+        "# 位置 position \r\n",
+        "%%html\r\n",
+        "<style>\r\n",
+        "    .box {\r\n",
+        "        height: 300px;\r\n",
+        "        width: 400px;\r\n",
+        "        border: 10px solid red;\r\n",
+        "        background-repeat: no-repeat;\r\n",
+        "        background-position: right 40px;\r\n",
+        "        background-image: url('data:image/svg+xml;utf8,<svg width=\"50\" height=\"50\" viewBox=\"353.085 44.594 256.261 222.663\" xmlns=\"http://www.w3.org/2000/svg\"> <path d=\"M 404.483 48.192 C 412.654 46.427 421.845 48.476 430.14 50.025 C 438.332 51.554 446.024 53.767 453.964 57.355 C 462.517 61.22 471.947 67.068 479.621 72.933 C 482.574 75.189 485.673 77.88 488.588 80.603 C 492.099 75.88 495.909 71.423 499.169 68.351 C 506.339 61.596 516.308 57.267 522.993 54.606 C 527.964 52.628 530.512 52.38 535.821 51.857 C 542.862 51.165 555.393 50.067 562.394 51.857 C 568.023 53.297 571.171 54.536 575.681 59.646 C 582.808 67.722 593.849 88.733 597.672 102.713 C 601.096 115.232 601.206 127.095 599.505 139.365 C 597.734 152.137 593.697 163.79 586.676 177.85 C 577.943 195.34 552.718 230.571 547.733 236.036 C 546.383 237.515 546.251 236.77 545.442 237.41 C 544.443 238.201 544.563 239.104 542.235 240.617 C 538.114 243.297 523.662 251.667 512.221 256.748 C 512.046 256.873 511.87 256.994 511.692 257.111 C 509.329 258.666 506.737 260.057 503.068 260.2 C 501.936 260.508 500.93 260.707 500.085 260.776 C 495.529 261.149 492.642 259.551 490.395 257.164 C 478.96 252.502 463.117 243.105 449.383 234.203 C 428.494 220.664 396.144 197.416 382.034 181.515 C 372.085 170.305 368.324 162.29 364.624 150.361 C 360.559 137.257 359.225 117.86 360.042 105.462 C 360.693 95.585 362.958 88.188 366.457 80.721 C 369.885 73.405 374.521 66.378 380.659 61.02 C 387.069 55.426 396.145 49.994 404.483 48.192 Z M 497.947 116.915 C 495.085 118.776 490.573 120.228 486.951 119.664 C 483.084 119.062 478.846 115.675 475.497 112.792 C 472.118 109.883 471.175 106.011 466.793 102.254 C 460.593 96.94 449.047 88.661 439.303 84.845 C 429.779 81.114 416.141 77.974 409.065 79.347 C 404.034 80.322 401.29 83.542 398.527 87.135 C 395.473 91.109 393.491 97.175 392.113 102.713 C 390.686 108.451 389.625 114.018 390.281 121.039 C 391.092 129.723 393.787 142.435 398.527 151.277 C 403.178 159.951 409.016 165.51 418.228 173.727 C 430.75 184.895 456.478 202.589 470.458 211.295 C 480.461 217.526 487.726 221.38 495.198 224.124 C 497.948 225.134 500.863 225.245 503.583 225.379 C 511.896 221.452 521.727 217.489 524.367 215.419 C 525.946 214.181 524.896 214.615 526.2 212.67 C 530.38 206.436 553.126 175.461 560.103 162.273 C 564.874 153.254 566.835 147.709 568.35 140.281 C 569.827 133.044 570.988 126.529 569.267 118.29 C 567.108 107.959 560.11 87.959 553.231 83.012 C 548.236 79.42 541.646 81.282 535.821 83.012 C 529.281 84.954 521.739 90.103 516.121 95.382 C 510.404 100.753 506.808 111.825 501.918 115.083 C 500.662 115.92 499.366 116.487 498.062 116.839 C 498.024 116.865 497.985 116.89 497.947 116.915 Z\" /> </svg>');\r\n",
+        "    }\r\n",
+        "</style>\r\n",
+        "\r\n",
+        "<div class=\"box\"></div>"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<style>\n",
+              "    .box {\n",
+              "        height: 300px;\n",
+              "        width: 400px;\n",
+              "        border: 10px solid red;\n",
+              "        background-repeat: no-repeat;\n",
+              "        background-position: right 40px;\n",
+              "        background-image: url('data:image/svg+xml;utf8,<svg width=\"50\" height=\"50\" viewBox=\"353.085 44.594 256.261 222.663\" xmlns=\"http://www.w3.org/2000/svg\"> <path d=\"M 404.483 48.192 C 412.654 46.427 421.845 48.476 430.14 50.025 C 438.332 51.554 446.024 53.767 453.964 57.355 C 462.517 61.22 471.947 67.068 479.621 72.933 C 482.574 75.189 485.673 77.88 488.588 80.603 C 492.099 75.88 495.909 71.423 499.169 68.351 C 506.339 61.596 516.308 57.267 522.993 54.606 C 527.964 52.628 530.512 52.38 535.821 51.857 C 542.862 51.165 555.393 50.067 562.394 51.857 C 568.023 53.297 571.171 54.536 575.681 59.646 C 582.808 67.722 593.849 88.733 597.672 102.713 C 601.096 115.232 601.206 127.095 599.505 139.365 C 597.734 152.137 593.697 163.79 586.676 177.85 C 577.943 195.34 552.718 230.571 547.733 236.036 C 546.383 237.515 546.251 236.77 545.442 237.41 C 544.443 238.201 544.563 239.104 542.235 240.617 C 538.114 243.297 523.662 251.667 512.221 256.748 C 512.046 256.873 511.87 256.994 511.692 257.111 C 509.329 258.666 506.737 260.057 503.068 260.2 C 501.936 260.508 500.93 260.707 500.085 260.776 C 495.529 261.149 492.642 259.551 490.395 257.164 C 478.96 252.502 463.117 243.105 449.383 234.203 C 428.494 220.664 396.144 197.416 382.034 181.515 C 372.085 170.305 368.324 162.29 364.624 150.361 C 360.559 137.257 359.225 117.86 360.042 105.462 C 360.693 95.585 362.958 88.188 366.457 80.721 C 369.885 73.405 374.521 66.378 380.659 61.02 C 387.069 55.426 396.145 49.994 404.483 48.192 Z M 497.947 116.915 C 495.085 118.776 490.573 120.228 486.951 119.664 C 483.084 119.062 478.846 115.675 475.497 112.792 C 472.118 109.883 471.175 106.011 466.793 102.254 C 460.593 96.94 449.047 88.661 439.303 84.845 C 429.779 81.114 416.141 77.974 409.065 79.347 C 404.034 80.322 401.29 83.542 398.527 87.135 C 395.473 91.109 393.491 97.175 392.113 102.713 C 390.686 108.451 389.625 114.018 390.281 121.039 C 391.092 129.723 393.787 142.435 398.527 151.277 C 403.178 159.951 409.016 165.51 418.228 173.727 C 430.75 184.895 456.478 202.589 470.458 211.295 C 480.461 217.526 487.726 221.38 495.198 224.124 C 497.948 225.134 500.863 225.245 503.583 225.379 C 511.896 221.452 521.727 217.489 524.367 215.419 C 525.946 214.181 524.896 214.615 526.2 212.67 C 530.38 206.436 553.126 175.461 560.103 162.273 C 564.874 153.254 566.835 147.709 568.35 140.281 C 569.827 133.044 570.988 126.529 569.267 118.29 C 567.108 107.959 560.11 87.959 553.231 83.012 C 548.236 79.42 541.646 81.282 535.821 83.012 C 529.281 84.954 521.739 90.103 516.121 95.382 C 510.404 100.753 506.808 111.825 501.918 115.083 C 500.662 115.92 499.366 116.487 498.062 116.839 C 498.024 116.865 497.985 116.89 497.947 116.915 Z\" /> </svg>');\n",
+              "    }\n",
+              "</style>\n",
+              "\n",
+              "<div class=\"box\"></div>"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 73
+        },
+        "id": "owwLb8ZjWCG4",
+        "outputId": "2cba5032-3cd5-4b76-ca41-8011b46b8e15"
+      },
+      "source": [
+        "# 引用符のつかない文字列\r\n",
+        "%%html\r\n",
+        "<style>\r\n",
+        "    .box {\r\n",
+        "        width: 400px;\r\n",
+        "        padding: 1em;\r\n",
+        "        border-radius: .5em;\r\n",
+        "        border: 5px solid rebeccapurple;\r\n",
+        "        background-color: lightblue;\r\n",
+        "    }\r\n",
+        "\r\n",
+        "    .box::after {\r\n",
+        "        content: \"This is a string. I know because it is quoted in the CSS.\"\r\n",
+        "    }\r\n",
+        "</style>\r\n",
+        "<div class=\"box\"></div>"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<style>\n",
+              "    .box {\n",
+              "        width: 400px;\n",
+              "        padding: 1em;\n",
+              "        border-radius: .5em;\n",
+              "        border: 5px solid rebeccapurple;\n",
+              "        background-color: lightblue;\n",
+              "    }\n",
+              "\n",
+              "    .box::after {\n",
+              "        content: \"This is a string. I know because it is quoted in the CSS.\"\n",
+              "    }\n",
+              "</style>\n",
+              "<div class=\"box\"></div>"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 159
+        },
+        "id": "vO6xIBNRbohe",
+        "outputId": "7e927693-c951-40ff-c76b-73a00da52990"
+      },
+      "source": [
+        "# 関数\r\n",
+        "%%html\r\n",
+        "<style>\r\n",
+        "    .wrapper {\r\n",
+        "        width: 400px;\r\n",
+        "        padding: 1em;\r\n",
+        "        border-radius: .5em;\r\n",
+        "        border: 5px solid rebeccapurple;\r\n",
+        "        background-color: lightblue;\r\n",
+        "    }\r\n",
+        "\r\n",
+        "    .box {\r\n",
+        "        width: calc(10% + 100px);\r\n",
+        "    }\r\n",
+        "</style>\r\n",
+        "<div class=\"wrapper\">\r\n",
+        "    <div class=\"box\">My width is calculated. My width is calculated. My width is calculated. My width is calculated.</div>\r\n",
+        "</div>"
+      ],
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<style>\n",
+              "    .wrapper {\n",
+              "        width: 400px;\n",
+              "        padding: 1em;\n",
+              "        border-radius: .5em;\n",
+              "        border: 5px solid rebeccapurple;\n",
+              "        background-color: lightblue;\n",
+              "    }\n",
+              "\n",
+              "    .box {\n",
+              "        width: calc(10% + 100px);\n",
+              "    }\n",
+              "</style>\n",
+              "<div class=\"wrapper\">\n",
+              "    <div class=\"box\">My width is calculated. My width is calculated. My width is calculated. My width is calculated.</div>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "2nhWa1BHS4qb"
       },
       "source": [
-        "# いまここ\n",
-        "https://developer.mozilla.org/ja/docs/Learn/CSS/Building_blocks/Values_and_units"
+        "斜体テキスト# いまここ\n",
+        "https://developer.mozilla.org/ja/docs/Learn/CSS/Building_blocks/Sizing_items_in_CSS"
       ]
     }
   ]
