Colaboratory を使用して作成しました

--- a/temp.ipynb
+++ b/temp.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "temp.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMXzCwlAU0dgT2J4RCGf/XD",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyPpoaXF6aj9omd+hwIttUFP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,6 +37,117 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "16JNBN-qUAQl",
+        "outputId": "10e51fde-d995-4b5e-e2cd-27561aaac5ca",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
+      },
+      "source": [
+        "# javascript を使って html で変数を使う\r\n",
+        "%%html\r\n",
+        "<span class=\"name1″></span>は男です<br />\r\n",
+        "<span class=\"name1″></span>の年齢は30歳です\r\n",
+        "<script>\r\n",
+        "    var nameStr = \"山田太郎\";\r\n",
+        "    var nameElements = document.getElementsByTagName(\"span\");\r\n",
+        "    for (var i = 0; i < nameElements.length; i++) {\r\n",
+        "        if (nameElements[i].className == \"name1\") {\r\n",
+        "            nameElements[i].innerText = nameStr;\r\n",
+        "        }\r\n",
+        "    }\r\n",
+        "</script>"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<span class=\"name1″></span>は男です<br />\n",
+              "<span class=\"name1″></span>の年齢は30歳です\n",
+              "<script>\n",
+              "    var nameStr = \"山田太郎\";\n",
+              "    var nameElements = document.getElementsByTagName(\"span\");\n",
+              "    for (var i = 0; i < nameElements.length; i++) {\n",
+              "        if (nameElements[i].className == \"name1\") {\n",
+              "            nameElements[i].innerText = nameStr;\n",
+              "        }\n",
+              "    }\n",
+              "</script>"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "xPIvSNqVP7aP",
+        "outputId": "afed5608-e0c8-4f5c-aec6-e7e34df1898c",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 145
+        }
+      },
+      "source": [
+        "# css を使ってhtmlで変数を使う。\r\n",
+        "# span を使えば自由な位置に決まった文字列を入れることができる。\r\n",
+        "%%html\r\n",
+        "<style>\r\n",
+        "    .parson1:before {\r\n",
+        "        content: \"田中\";\r\n",
+        "    }\r\n",
+        "\r\n",
+        "    p.age1:after {\r\n",
+        "        content: \"36歳\";\r\n",
+        "    }\r\n",
+        "</style>\r\n",
+        "<h1>サンプル</h1>\r\n",
+        "<p class=\"parson1\">は男の子</p>\r\n",
+        "<p class=\"parson1 age1\">の年齢は</p>\r\n",
+        "<p>私の彼氏は<span class=\"parson1\"></span>君だよ</p>"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<style>\n",
+              "    .parson1:before {\n",
+              "        content: \"田中\";\n",
+              "    }\n",
+              "\n",
+              "    p.age1:after {\n",
+              "        content: \"36歳\";\n",
+              "    }\n",
+              "</style>\n",
+              "<h1>サンプル</h1>\n",
+              "<p class=\"parson1\">は男の子</p>\n",
+              "<p class=\"parson1 age1\">の年齢は</p>\n",
+              "<p>私の彼氏は<span class=\"parson1\"></span>君だよ</p>"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "uGyIMg6Wdu-I"
       },
       "source": [
@@ -48,11 +160,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "U2rl13lXiYGg",
-        "outputId": "45000c5b-ef0f-44f8-802e-d39a41caaf60",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 69
-        }
+        },
+        "outputId": "45000c5b-ef0f-44f8-802e-d39a41caaf60"
       },
       "source": [
         "from IPython.display import Math, display\r\n",
@@ -62,7 +174,7 @@
         "display(Math('f(x) =' + sy.latex(expression)))\r\n",
         "display(Math('\\\\left[ \\\\frac{3 \\\\mu_2^2+\\\\sigma_2^2\\\\log(2)}{2\\\\mu_2} \\\\right]'))"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -94,17 +206,17 @@
       "cell_type": "code",
       "metadata": {
         "id": "7S_3sUHzj7Wh",
-        "outputId": "06a7ff1e-5102-46d5-885e-62858f8f677d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 47
-        }
+        },
+        "outputId": "06a7ff1e-5102-46d5-885e-62858f8f677d"
       },
       "source": [
         "%%latex\r\n",
         "\\left[ \\frac{3 \\mu_2^2+ \\sigma_2^2 \\log(2)}{ 2\\mu_2} \\right]"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -153,11 +265,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "kkAckyg3cLKw",
-        "outputId": "2efe0719-84a1-43f9-d36f-f60bdefbef2b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 38
-        }
+        },
+        "outputId": "2efe0719-84a1-43f9-d36f-f60bdefbef2b"
       },
       "source": [
         "from sympy import *\r\n",
@@ -165,7 +277,7 @@
         "a, b = symbols('a, b')\r\n",
         "a"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -187,17 +299,17 @@
       "cell_type": "code",
       "metadata": {
         "id": "aynrucM7cmGX",
-        "outputId": "7c95189d-2755-4c95-b009-9794bedf3f42",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 38
-        }
+        },
+        "outputId": "7c95189d-2755-4c95-b009-9794bedf3f42"
       },
       "source": [
         "from sympy import *\r\n",
         "display(a**3)"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -219,11 +331,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "GdCiTmtOc4Ry",
-        "outputId": "5240a6d9-557e-4880-bb75-744dbfc67720",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 60
-        }
+        },
+        "outputId": "5240a6d9-557e-4880-bb75-744dbfc67720"
       },
       "source": [
         "from sympy import *\r\n",
@@ -232,7 +344,7 @@
         "display (a)\r\n",
         "display (b)"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
