--- a/temp.ipynb
+++ b/temp.ipynb
@@ -6,7 +6,7 @@
       "name": "temp.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPpoaXF6aj9omd+hwIttUFP",
+      "authorship_tag": "ABX9TyOWk6PdX+lw0LBm/708QGAL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,118 +31,7 @@
         "id": "dXa77goOb4Nl"
       },
       "source": [
-        "# ここを選択してからセルを追加する"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "16JNBN-qUAQl",
-        "outputId": "10e51fde-d995-4b5e-e2cd-27561aaac5ca",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        }
-      },
-      "source": [
-        "# javascript を使って html で変数を使う\r\n",
-        "%%html\r\n",
-        "<span class=\"name1″></span>は男です<br />\r\n",
-        "<span class=\"name1″></span>の年齢は30歳です\r\n",
-        "<script>\r\n",
-        "    var nameStr = \"山田太郎\";\r\n",
-        "    var nameElements = document.getElementsByTagName(\"span\");\r\n",
-        "    for (var i = 0; i < nameElements.length; i++) {\r\n",
-        "        if (nameElements[i].className == \"name1\") {\r\n",
-        "            nameElements[i].innerText = nameStr;\r\n",
-        "        }\r\n",
-        "    }\r\n",
-        "</script>"
-      ],
-      "execution_count": 6,
-      "outputs": [
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/html": [
-              "<span class=\"name1″></span>は男です<br />\n",
-              "<span class=\"name1″></span>の年齢は30歳です\n",
-              "<script>\n",
-              "    var nameStr = \"山田太郎\";\n",
-              "    var nameElements = document.getElementsByTagName(\"span\");\n",
-              "    for (var i = 0; i < nameElements.length; i++) {\n",
-              "        if (nameElements[i].className == \"name1\") {\n",
-              "            nameElements[i].innerText = nameStr;\n",
-              "        }\n",
-              "    }\n",
-              "</script>"
-            ],
-            "text/plain": [
-              "<IPython.core.display.HTML object>"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          }
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "xPIvSNqVP7aP",
-        "outputId": "afed5608-e0c8-4f5c-aec6-e7e34df1898c",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 145
-        }
-      },
-      "source": [
-        "# css を使ってhtmlで変数を使う。\r\n",
-        "# span を使えば自由な位置に決まった文字列を入れることができる。\r\n",
-        "%%html\r\n",
-        "<style>\r\n",
-        "    .parson1:before {\r\n",
-        "        content: \"田中\";\r\n",
-        "    }\r\n",
-        "\r\n",
-        "    p.age1:after {\r\n",
-        "        content: \"36歳\";\r\n",
-        "    }\r\n",
-        "</style>\r\n",
-        "<h1>サンプル</h1>\r\n",
-        "<p class=\"parson1\">は男の子</p>\r\n",
-        "<p class=\"parson1 age1\">の年齢は</p>\r\n",
-        "<p>私の彼氏は<span class=\"parson1\"></span>君だよ</p>"
-      ],
-      "execution_count": 5,
-      "outputs": [
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/html": [
-              "<style>\n",
-              "    .parson1:before {\n",
-              "        content: \"田中\";\n",
-              "    }\n",
-              "\n",
-              "    p.age1:after {\n",
-              "        content: \"36歳\";\n",
-              "    }\n",
-              "</style>\n",
-              "<h1>サンプル</h1>\n",
-              "<p class=\"parson1\">は男の子</p>\n",
-              "<p class=\"parson1 age1\">の年齢は</p>\n",
-              "<p>私の彼氏は<span class=\"parson1\"></span>君だよ</p>"
-            ],
-            "text/plain": [
-              "<IPython.core.display.HTML object>"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          }
-        }
+        "# メモ"
       ]
     },
     {
@@ -770,6 +659,210 @@
             "needs_background": "light"
           }
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "uO3GD07fWcjf"
+      },
+      "source": [
+        "# html で変数を扱う"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 145
+        },
+        "id": "Nfh_KGr8WQZk",
+        "outputId": "afed5608-e0c8-4f5c-aec6-e7e34df1898c"
+      },
+      "source": [
+        "# css を使ってhtmlで変数を使う。\r\n",
+        "# span を使えば自由な位置に決まった文字列を入れることができる。\r\n",
+        "%%html\r\n",
+        "<style>\r\n",
+        "    .parson1:before {\r\n",
+        "        content: \"田中\";\r\n",
+        "    }\r\n",
+        "\r\n",
+        "    p.age1:after {\r\n",
+        "        content: \"36歳\";\r\n",
+        "    }\r\n",
+        "</style>\r\n",
+        "<h1>サンプル</h1>\r\n",
+        "<p class=\"parson1\">は男の子</p>\r\n",
+        "<p class=\"parson1 age1\">の年齢は</p>\r\n",
+        "<p>私の彼氏は<span class=\"parson1\"></span>君だよ</p>"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<style>\n",
+              "    .parson1:before {\n",
+              "        content: \"田中\";\n",
+              "    }\n",
+              "\n",
+              "    p.age1:after {\n",
+              "        content: \"36歳\";\n",
+              "    }\n",
+              "</style>\n",
+              "<h1>サンプル</h1>\n",
+              "<p class=\"parson1\">は男の子</p>\n",
+              "<p class=\"parson1 age1\">の年齢は</p>\n",
+              "<p>私の彼氏は<span class=\"parson1\"></span>君だよ</p>"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "id": "ZwZYmNvgWQZi",
+        "outputId": "10e51fde-d995-4b5e-e2cd-27561aaac5ca"
+      },
+      "source": [
+        "# javascript を使って html で変数を使う\r\n",
+        "%%html\r\n",
+        "<span class=\"name1″></span>は男です<br />\r\n",
+        "<span class=\"name1″></span>の年齢は30歳です\r\n",
+        "<script>\r\n",
+        "    var nameStr = \"山田太郎\";\r\n",
+        "    var nameElements = document.getElementsByTagName(\"span\");\r\n",
+        "    for (var i = 0; i < nameElements.length; i++) {\r\n",
+        "        if (nameElements[i].className == \"name1\") {\r\n",
+        "            nameElements[i].innerText = nameStr;\r\n",
+        "        }\r\n",
+        "    }\r\n",
+        "</script>"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<span class=\"name1″></span>は男です<br />\n",
+              "<span class=\"name1″></span>の年齢は30歳です\n",
+              "<script>\n",
+              "    var nameStr = \"山田太郎\";\n",
+              "    var nameElements = document.getElementsByTagName(\"span\");\n",
+              "    for (var i = 0; i < nameElements.length; i++) {\n",
+              "        if (nameElements[i].className == \"name1\") {\n",
+              "            nameElements[i].innerText = nameStr;\n",
+              "        }\n",
+              "    }\n",
+              "</script>"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "LJylwWTzXNEL",
+        "outputId": "24bdf632-bdcd-4859-c9a1-5de4c35ef18c",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
+      },
+      "source": [
+        "# 実験\r\n",
+        "%%html\r\n",
+        "<!-- <button>Click me</button> -->\r\n",
+        "<div>\r\n",
+        "<!-- <span class=\"name1\"></span>は男です<br> -->\r\n",
+        "<span class=\"name1\"></span>の年齢は30歳です\r\n",
+        "<div>\r\n",
+        "<script>\r\n",
+        "    var nameStr = \"山田太郎\";\r\n",
+        "    // const names = document.getElementsByClassName('name1');\r\n",
+        "    var names = document.getElementsByClassName('name1');\r\n",
+        "    names[0].textContent = nameStr;\r\n",
+        "    // function createParagraph() {\r\n",
+        "    //     let para = document.createElement('p');\r\n",
+        "    //     para.textContent = 'ボタンが押されました!';\r\n",
+        "    //     document.body.appendChild(para);\r\n",
+        "    // }\r\n",
+        "\r\n",
+        "    // const buttons = document.querySelectorAll('button');\r\n",
+        "\r\n",
+        "    // for (let i = 0; i < buttons.length; i++) {\r\n",
+        "    //     buttons[i].addEventListener('click', createParagraph);\r\n",
+        "    // }\r\n",
+        "</script>"
+      ],
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<!-- <button>Click me</button> -->\n",
+              "<div>\n",
+              "<!-- <span class=\"name1\"></span>は男です<br> -->\n",
+              "<span class=\"name1\"></span>の年齢は30歳です\n",
+              "<div>\n",
+              "<script>\n",
+              "    var nameStr = \"山田太郎\";\n",
+              "    // const names = document.getElementsByClassName('name1');\n",
+              "    var names = document.getElementsByClassName('name1');\n",
+              "    names[0].textContent = nameStr;\n",
+              "    // function createParagraph() {\n",
+              "    //     let para = document.createElement('p');\n",
+              "    //     para.textContent = 'ボタンが押されました!';\n",
+              "    //     document.body.appendChild(para);\n",
+              "    // }\n",
+              "\n",
+              "    // const buttons = document.querySelectorAll('button');\n",
+              "\n",
+              "    // for (let i = 0; i < buttons.length; i++) {\n",
+              "    //     buttons[i].addEventListener('click', createParagraph);\n",
+              "    // }\n",
+              "</script>"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "hy9-SJ4kWBEJ"
+      },
+      "source": [
+        "# いまここ"
       ]
     }
   ]
