Colaboratory を使用して作成しました

--- a/temp.ipynb
+++ b/temp.ipynb
@@ -6,7 +6,7 @@
       "name": "temp.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNqJ3EsFiHZgs1v/bBb3zSs",
+      "authorship_tag": "ABX9TyOiMX+gH+VVYC+TOPoJ9okt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -874,18 +874,187 @@
       },
       "source": [
         "# ここで for loop を使いたくないので、for loop を reduce にする研究を始める\r\n",
-        "\r\n",
-        "https://qiita.com/ttatsf/items/846ff861bd45fca0832c"
+        "\r\n"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "c2V_3W_nhNek",
-        "outputId": "4a7eb2da-122a-4642-b460-506a552f81fe",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "2178531e-248b-4db8-cf19-316b77ad8791"
+      },
+      "source": [
+        "# 0-9 の合計 45 を for loop を使わずに計算する\r\n",
+        "%%script node\r\n",
+        "const add = (a, b) => a + b;\r\n",
+        "sum = Array.from(Array(10),(a,b) => b).reduce(add)\r\n",
+        "\r\n",
+        "console.log(sum) "
+      ],
+      "execution_count": 77,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "45\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "AIK3JiCJNoZ8",
+        "outputId": "116b6623-15a5-4d98-edff-b458d18bd09e"
+      },
+      "source": [
+        "# 1-0 の合計 55 を for loop を使わずに計算する\r\n",
+        "%%script node\r\n",
+        "const add = (a, b) => a + b;\r\n",
+        "sum = Array.from(Array(10),(a,b) => b+1).reduce(add)\r\n",
+        "\r\n",
+        "console.log(sum) "
+      ],
+      "execution_count": 78,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "55\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "tGOfKkthN1Xe",
+        "outputId": "fb7ca443-ad34-41ea-ae0f-58331632b785",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
+      },
+      "source": [
+        "# 説明\r\n",
+        "# const add = (a, b) => a + b;\r\n",
+        "# は function を使わずに関数を定義している\r\n",
+        "%%script node\r\n",
+        "const add = (a, b) => a + b;\r\n",
+        "console.log(add(1,2));\r\n",
+        "function add2 (a, b) {return a + b};\r\n",
+        "console.log(add2(2,3));\r\n"
+      ],
+      "execution_count": 84,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "3\n",
+            "5\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "PZA0kLi6Oobq",
+        "outputId": "d49d617a-f350-4fcf-ec78-762cca81157b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# 実験 複数行\r\n",
+        "%%script node\r\n",
+        "const addmult = (a, b) => {\r\n",
+        "    sum = a+b;\r\n",
+        "    product = a*b;\r\n",
+        "    return sum * product\r\n",
+        "};\r\n",
+        "console.log(addmult(2,3)); // 30"
+      ],
+      "execution_count": 91,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "30\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "h0okkMJWxOOJ",
+        "outputId": "515c37fa-5312-4fc8-ffa2-727af257a514"
+      },
+      "source": [
+        "# Array.from は Array を作る\r\n",
+        "%%script node\r\n",
+        "console.log(Array.from('foo'));\r\n",
+        "console.log(Array.from([1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11], x => x + x));\r\n",
+        "console.log(Array.from(Array(10), (a, b) => b));"
+      ],
+      "execution_count": 94,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[ 'f', 'o', 'o' ]\n",
+            "[\n",
+            "   2,  4,  6,  8, 10,\n",
+            "  12, 14, 16, 18, 20,\n",
+            "  22\n",
+            "]\n",
+            "[\n",
+            "  0, 1, 2, 3, 4,\n",
+            "  5, 6, 7, 8, 9\n",
+            "]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "KY60aNCOPs56"
+      },
+      "source": [
+        "# colab で Array を console.log で出力すると一行に出力されない\r\n",
+        "# JSON.stringifyを使えばとりあえず一行になる\r\n",
+        "%%script node\r\n",
+        "console.log(Array.from(Array(10), (a, b) => b));\r\n",
+        "console.log(JSON.stringify(Array.from(Array(10), (a, b) => b)));\r\n",
+        "console.log(JSON.stringify(Array.from({length:10}, (a, b) => b)));\r\n",
+        "console.log(Array.from({length: 10}));"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "JXtvCGFXuu01",
+        "outputId": "4a7eb2da-122a-4642-b460-506a552f81fe"
       },
       "source": [
         "%%script node\r\n",
@@ -897,7 +1066,7 @@
         "const items = [0, 1, 2]\r\n",
         "console.log(sum(items))  //  3"
       ],
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -909,12 +1078,25 @@
       ]
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "DBGs9TsWS44Y"
+      },
+      "source": [
+        "const range = (start, stop) => Array.from({ length: (stop - start) + 1}, (_, i) => start + i);"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "hy9-SJ4kWBEJ"
       },
       "source": [
-        "# いまここ"
+        "# いまここ\r\n",
+        "\r\n",
+        "https://qiita.com/ttatsf/items/846ff861bd45fca0832c"
       ]
     }
   ]
