Colaboratory を使用して作成しました

--- a/learnjavascript.ipynb
+++ b/learnjavascript.ipynb
@@ -6,7 +6,7 @@
       "name": "learnjavascript.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPvCNoUeTeSx4aaajcJDJ49",
+      "authorship_tag": "ABX9TyMv7C0JKanWUpgFJcFuEgHs",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -197,6 +197,47 @@
       },
       "source": [
         "javascript の言語仕様とかだけを使って学ぶには %%javascript や %%script node の方が簡便かもしれないが、mozilla のサイトをはじめ、多くの入門サイトが html の script として導入を書いているので、html の学習も兼ねて セルマジックは %%html を基本とする。"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "T3TSaWyhXwrb",
+        "outputId": "1711410f-d574-4edf-f5c5-226500548e85",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 17
+        }
+      },
+      "source": [
+        "# 実験\r\n",
+        "%%html\r\n",
+        "<div id=\"main\"></div>\r\n",
+        "<script>\r\n",
+        "    const para = document.getElementById('main');\r\n",
+        "    para.innerHtml = <h1>ハロー html!!!!</h1>\r\n",
+        "</script>"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<div id=\"main\"></div>\n",
+              "<script>\n",
+              "    const para = document.getElementById('main');\n",
+              "    para.innerHtml = <h1>ハロー html!!!!</h1>\n",
+              "</script>"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
       ]
     },
     {
@@ -2132,11 +2173,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "o8hdNf_sk0zJ",
-        "outputId": "138a8a37-6594-4677-cb71-8d0dc34245f2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 74
-        }
+        },
+        "outputId": "138a8a37-6594-4677-cb71-8d0dc34245f2"
       },
       "source": [
         "# 実験 innterHTML\n",
@@ -2153,7 +2194,7 @@
         "    list.appendChild(item);\n",
         "</script>"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
