Colaboratory を使用して作成しました

--- a/functionalpython.ipynb
+++ b/functionalpython.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "functionalpython.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMCwiDALq41QWqg2MhzFpat",
+      "authorship_tag": "ABX9TyPGIwUafszZRKx77fQxx7cP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,17 +25,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "metadata": {
-        "id": "ejLW8duEBp8d"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "q2VOU_NmBs9A"
@@ -44,6 +33,44 @@
         "# メモ\r\n",
         "関数型Python という考え方\r\n",
         "1. reduce, map, filter を使う。\r\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ejLW8duEBp8d",
+        "outputId": "0b80dfdb-1355-436e-a90f-42ab714258b8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# reduce は functools にある\r\n",
+        "from functools import reduce\r\n",
+        "array = [20, 1, 2, 3, 4, 5]\r\n",
+        "\r\n",
+        "print(reduce(lambda x, y: x+y, array))\r\n",
+        "\r\n",
+        "from operator import add\r\n",
+        "from operator import sub\r\n",
+        "from operator import mul\r\n",
+        "\r\n",
+        "print(reduce(add, array)) # 35\r\n",
+        "print(reduce(sub, array)) # 5\r\n",
+        "print(reduce(mul, array)) # 2400"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "35\n",
+            "35\n",
+            "5\n",
+            "2400\n"
+          ],
+          "name": "stdout"
+        }
       ]
     }
   ]
