Colaboratory を使用して作成しました

--- a/sympytutorial.ipynb
+++ b/sympytutorial.ipynb
@@ -6,7 +6,7 @@
       "name": "sympytutorial.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyM2lRLBEglp2f3lzPXyuGvg",
+      "authorship_tag": "ABX9TyPrH3uvFtD+5PFFq4UdqWya",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -703,7 +703,7 @@
         "display(pi)\r\n",
         "display(E)"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -777,7 +777,7 @@
         "expr = x + 2*y\r\n",
         "display(expr)"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -798,11 +798,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "EB7x37H6l2Sd",
-        "outputId": "fa79f3a6-0f00-4575-b190-f8685f5c99a4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 38
-        }
+        },
+        "outputId": "fa79f3a6-0f00-4575-b190-f8685f5c99a4"
       },
       "source": [
         "from sympy import *\r\n",
@@ -812,7 +812,7 @@
         "expr = x + 2*y\r\n",
         "display(x*expr) # 自動で展開(expand)はしない"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -833,11 +833,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "6lAm6a7CmlMp",
-        "outputId": "9982a425-b8ef-4224-a8de-b89765f6e954",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 60
-        }
+        },
+        "outputId": "9982a425-b8ef-4224-a8de-b89765f6e954"
       },
       "source": [
         "from sympy import *\r\n",
@@ -848,7 +848,7 @@
         "display(expand(x*expr)) # 展開\r\n",
         "display(factor(expand(x*expr))) # 因数分解"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -886,6 +886,9 @@
       },
       "source": [
         "# いまここ\r\n",
+        "高階関数の使い方！Pythonでreduceを使う方法【初心者向け】\r\n",
+        "\r\n",
+        "\r\n",
         "https://docs.sympy.org/latest/tutorial/intro.html"
       ]
     }
